css/style.less
/*! Intecmedia.Bootstrap  | (c) 2014 Intecmedia. | license public domain */
@import "bootstrap.less";

/* Responsive mixins */
.media-xs(@rules) {
    @media (max-width: @screen-xs-max) { @rules(); }
}
.media-sm(@rules) {
    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) { @rules(); }
}
.media-md(@rules) {
    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) { @rules(); }
}
.media-lg(@rules) {
    @media (min-width: @screen-lg-min) { @rules(); }
}

/* Hide blocks on printer */
@media print {
    footer, header {
        display: none;
    }
}

/* Addtional styles */
@footerHeight: 100px;
html, body {
    height: 100%;
}

#wrapper {
    height: auto !important;
    height: 100%;
    margin: 0 auto -@footerHeight;
    min-height: 100%;
    #footer-push {
        height: @footerHeight;
    }
}

footer {
    height: @footerHeight;
}

#main {

}

